Fix background-color in odd class
Substitute previous color for background-color,
as intended

--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,4 +1,4 @@
 .odd {
-    color:hsl(337, 94%, 49%);
+    background-color:hsl(337, 94%, 49%);
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
