--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,7 +3,7 @@
     font-family: "Verdana", "DejaVu Sans", sans-serif;
 }
 
-.two {
+#two {
     color: rgb(0, 0, 255);
     font-size: 36px;
 }
@@ -12,7 +12,7 @@
     font-size: 24px;
 }
 
-.four {
+#four {
     background-color: #00f000;
     font-size: 24px;
     font-weight: bold;
